# learnit

./: .gitignore  LICENSE.md  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: index.md
learnit/: cli.py
